--- a/style.css
+++ b/style.css
@@ -15,9 +15,22 @@ h1, h2, p, ul, ol {
     margin-right: 8%;
 }
 
+a {
+    font-family: "Times New Roman", sans-serif;
+    color: #678983;
+    font-size: 23px;
+    text-decoration: none;
+    margin-left: 2%;
+}
+
+ul, ol {
+    line-height: 1.5;
+}
+
 img {
     border-radius: 0 25% 0 25%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 15px;
 }
